--- a/src/app/dashboard/post-types-board/post-types-board.component.html
+++ b/src/app/dashboard/post-types-board/post-types-board.component.html
@@ -13,7 +13,7 @@
               (click)="removeItem(item)">
                   <button  mat-icon-button class="list-group-item" >{{ item.name }}</button>
                   <span  class="span-todo"></span>
-                  <span style="position:relative; right: 35x">
+                  <span >
                     <button mat-icon-button color="warn" ><mat-icon>delete_outline</mat-icon> </button>
           
                 </span>
