--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -28,7 +28,9 @@
                     <app-post-list ></app-post-list>
 
                 </mat-tab>
-                <mat-tab color="accent" label="Your Feed"> Your Feed </mat-tab>
+                <mat-tab color="accent" label="Your Feed"> 
+                     <app-profile-posts></app-profile-posts>
+                </mat-tab>
             </mat-tab-group>
 
         </div>
