--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -50,7 +50,7 @@
                         <app-profile-posts></app-profile-posts>
                     </mat-tab>
                     <mat-tab label=" Favorited Posts ">
-                        <app-profile-favorites></app-profile-favorites>
+                        <!-- <app-profile-favorites></app-profile-favorites> -->
                     </mat-tab>
 
                 </mat-tab-group>
