--- a/src/app/dashboard/users-board/users-board.component.html
+++ b/src/app/dashboard/users-board/users-board.component.html
@@ -1,6 +1,6 @@
 <div class="search-div">
   <a  routerLink="/dashboard/createUser" mat-raised-button>
-    <mat-icon>add</mat-icon>create
+    <mat-icon>add</mat-icon>create user
   </a>
   <mat-form-field class="search-form-field">
       <input matInput (keyup)="applyFilter()" [(ngModel)]="value" placeholder="Filter">
