--- a/src/app/shared/blogComponents/post-type/post-type.component.scss
+++ b/src/app/shared/blogComponents/post-type/post-type.component.scss
@@ -2,7 +2,9 @@
     color: #fff;
     position: relative;
     // margin-bottom: .5rem;
+    // width: 100%;
     cursor: pointer;
+    display: flex;
   }
   
   .mat-list-item::before {
