--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -12,15 +12,21 @@
     <p>Un endroit pour partager vos connaissances Web de développeur.</p>
 </div>
 <div class="container">
+      <div class="row justify-content-end">
+        <div class="col col-sm-12 col-md-8 col-lg-9 ">
+            <app-search ></app-search>
+            <!-- <app-side-nav-tags> </app-side-nav-tags> -->
 
+        </div>
+      </div>
     <div class="row">
-        <div class="col col-sm-2 col-md-3 col-lg-3">
+        <div class="col col-sm-12 col-md-4 col-lg-3 ">
             <!-- <app-search></app-search> -->
             <app-side-nav>
                 <app-post-type></app-post-type>
             </app-side-nav>
         </div>
-        <div class="col col-sm-7 col-md-7 col-lg-7 post_list">
+        <div class="col col-sm-12 col-md-8 col-lg-9 post_list">
 
             <mat-tab-group>
                 <mat-tab label="Global Feed">
@@ -34,10 +40,6 @@
             </mat-tab-group>
 
         </div>
-        <div class="col col-sm-2 col-md-2 col-lg-2">
-            <app-search></app-search>
-            <!-- <app-side-nav-tags> </app-side-nav-tags> -->
-
-        </div>
+        
     </div>
 </div>
